--- a/src/components/pages/Pages.sass
+++ b/src/components/pages/Pages.sass
@@ -9,6 +9,10 @@
   gap: 4rem
   padding: 4rem
   text-align: center
+  backdrop-filter: blur(30px)
+
+  &.game
+    backdrop-filter: none
 
   h1
     font-size: 2.6rem
