--- a/src/components/pages/Pages.sass
+++ b/src/components/pages/Pages.sass
@@ -13,6 +13,7 @@
 
   &.game
     backdrop-filter: none
+    pointer-events: none
 
   h1
     font-size: 2.6rem
@@ -31,6 +32,7 @@
     margin-top: var(--p2)
 
   transition: all 0.3s ease 0s
+  
   &:not(.show)
     opacity: 0
     pointer-events: none
