--- a/src/components/pages/Pages.sass
+++ b/src/components/pages/Pages.sass
@@ -30,6 +30,7 @@
     padding-block: var(--p1)
     padding-inline: var(--p2)
     margin-top: var(--p2)
+    pointer-events: auto
 
   transition: all 0.3s ease 0s
   
@@ -37,3 +38,5 @@
     opacity: 0
     pointer-events: none
 
+    button, a
+      pointer-events: none
