--- a/src/styles/app/fonts.sass
+++ b/src/styles/app/fonts.sass
@@ -9,12 +9,103 @@
 // 900 Black (Heavy)
 // 950 Extra Black (Ultra Black)
 
-// @font-face
-//   font-family: 'VCR'
-//   src: url('/assets/fonts/subset/VCR_OSD_MONO.ttf')
-//   font-weight: normal
+// ************************************************************
+//
+// TCCC Holidays 23
+//
+// ************************************************************
+@font-face
+  font-family: "TCCCHolidays23-Curated"
+  src: urls('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Curated.otf')
+  font-weight: normal
 
-// @font-face
-//   font-family: 'VCR'
-//   src: url('/assets/fonts/subset/VCR_OSD_MONO.ttf')
-//   font-weight: bold
+@font-face
+  font-family: "TCCCHolidays23-Narrow"
+  src: urls('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Narrow.otf')
+  font-weight: normal
+
+@font-face
+  font-family: "TCCCHolidays23-Normal"
+  src: urls('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Normal.otf')
+  font-weight: normal
+
+
+// ************************************************************
+//
+// TCCC Unity
+//
+// ************************************************************
+@font-face
+  font-family: "TCCCUnity"
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Light.ttf')
+  font-weight: 300
+@font-face
+  font-family: "TCCCUnity"
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Regular.ttf')
+  font-weight: 400
+@font-face
+  font-family: "TCCCUnity"
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Medium.ttf')
+  font-weight: 500
+@font-face
+  font-family: "TCCCUnity"
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Bold.ttf')
+  font-weight: 700
+@font-face
+  font-family: "TCCCUnity"
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Black.ttf')
+  font-weight: 900
+
+@font-face
+  font-family: "TCCCUnity"
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Italic.ttf')
+  font-weight: 500
+  font-style: italic
+@font-face
+  font-family: "TCCCUnity"
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-BoldItalic.ttf')
+  font-weight: 500
+  font-style: italic
+
+
+// ************************************************************
+//
+// TCCC Unity Cond
+//
+// ************************************************************
+
+@font-face
+  font-family: "TCCCUnityCond"
+  src: url('/assets/fonts/TCCCUnityCond/subset/TCCCUnityCond-Medium.ttf')
+  font-weight: 500
+@font-face
+  font-family: "TCCCUnityCond"
+  src: url('/assets/fonts/TCCCUnityCond/subset/TCCCUnityCond-Bold.ttf')
+  font-weight: 700
+
+
+// ************************************************************
+//
+// TCCC Unity Head
+//
+// ************************************************************
+@font-face
+  font-family: "TCCCUnityHead"
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Light.ttf')
+  font-weight: 300
+@font-face
+  font-family: "TCCCUnityHead"
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Regular.ttf')
+  font-weight: 400
+@font-face
+  font-family: "TCCCUnityHead"
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Medium.ttf')
+  font-weight: 500
+@font-face
+  font-family: "TCCCUnityHead"
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Bold.ttf')
+  font-weight: 700
+@font-face
+  font-family: "TCCCUnityHead"
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Black.ttf')
+  font-weight: 900
