--- a/src/styles/sass/type-mixins.sass
+++ b/src/styles/sass/type-mixins.sass
@@ -1,11 +1,77 @@
 @import "./breakpoints.sass"
 
-$font-amplitude: 'Amplitude'
+
+$font-tccc: 'TCCCUnity'
+$font-tccc-cond: 'TCCCUnityCond'
+$font-tccc-head: 'TCCCUnityHead'
+
+.ui
+  font-family: $font-tccc-cond
+
+=text-gradient($thick: 0.2rem)
+  background: -webkit-linear-gradient(#fff, #ccc)
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+  -webkit-text-stroke-width: $thick
+  -webkit-text-stroke-color: rgba(255,255,255,0.1)
+
+=type-countdown
+  font-size: 45rem
+  line-height: 5.8rem
+  font-weight: 700
+  letter-spacing: -0.02em
+  text-transform: uppercase
+
+=type-score
+  font-size: 5rem
+  line-height: 5.8rem
+  font-weight: 700
+  letter-spacing: -0.02em
+  text-transform: uppercase
 
 =type-h1
-  font-size: 3rem
+  font-size: 8.5rem
+  line-height: 7.2rem
   font-weight: 700
   text-transform: uppercase
 
+=type-h2
+  font-size: 8rem
+  line-height: 5.8rem
+  font-weight: 700
+  letter-spacing: -0.02em
+  text-transform: uppercase
+
+=type-h3
+  font-size: 4rem
+  line-height: 7.2rem
+  font-weight: 700
+  text-transform: uppercase
+
+=type-h4
+  font-size: 2.5rem
+  line-height: 2.6rem
+  font-weight: 500
+  text-transform: uppercase
+
+=type-subheading
+  font-size: 1.5rem
+  line-height: 2.6rem
+  font-weight: 500
+  text-transform: uppercase
+
 =type-body1
-  font-size: 1.6rem
+  font-size: 2rem
+  font-weight: 500
+  line-height: 2.6rem
+
+=type-cta1
+  font-size: 2rem
+  font-weight: 500
+  line-height: 2.6rem
+
+=type-cta2
+  font-size: 1.5rem
+  font-weight: 500
+  line-height: 2.6rem
+  letter-spacing: 0.02em
