--- a/src/styles/app/type-classes.sass
+++ b/src/styles/app/type-classes.sass
@@ -1,7 +1,22 @@
 @import "../sass/type-mixins.sass"
 
-// .type-h1
-//   +type-h1()
+.type-countdown
+  +type-countdown()
 
-// .type-body1
-//   +type-body1()
+.type-score
+  +type-score()
+
+.type-point
+  +type-point()
+
+.type-h1
+  +type-h1()
+
+.type-body1
+  +type-body1()
+
+.type-caption
+  +type-caption()
+
+.type-cta
+  +type-cta()
