--- a/src/styles/app/fonts.sass
+++ b/src/styles/app/fonts.sass
@@ -16,17 +16,17 @@
 // ************************************************************
 @font-face
   font-family: "TCCCHolidays23-Curated"
-  src: urls('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Curated.otf')
+  src: url('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Curated.otf') format("opentype")
   font-weight: normal
 
 @font-face
   font-family: "TCCCHolidays23-Narrow"
-  src: urls('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Narrow.otf')
+  src: url('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Narrow.otf') format("opentype")
   font-weight: normal
 
 @font-face
   font-family: "TCCCHolidays23-Normal"
-  src: urls('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Normal.otf')
+  src: url('/assets/fonts/TCCHolidays23/subset/TCCCHolidays23-Normal.otf') format("opentype")
   font-weight: normal
 
 
@@ -37,33 +37,33 @@
 // ************************************************************
 @font-face
   font-family: "TCCCUnity"
-  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Light.ttf')
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Light.ttf') format("truetype")
   font-weight: 300
 @font-face
   font-family: "TCCCUnity"
-  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Regular.ttf')
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Regular.ttf') format("truetype")
   font-weight: 400
 @font-face
   font-family: "TCCCUnity"
-  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Medium.ttf')
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Medium.ttf') format("truetype")
   font-weight: 500
 @font-face
   font-family: "TCCCUnity"
-  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Bold.ttf')
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Bold.ttf') format("truetype")
   font-weight: 700
 @font-face
   font-family: "TCCCUnity"
-  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Black.ttf')
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Black.ttf') format("truetype")
   font-weight: 900
 
 @font-face
   font-family: "TCCCUnity"
-  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Italic.ttf')
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-Italic.ttf') format("truetype")
   font-weight: 500
   font-style: italic
 @font-face
   font-family: "TCCCUnity"
-  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-BoldItalic.ttf')
+  src: url('/assets/fonts/TCCCUnity/subset/TCCCUnity-BoldItalic.ttf') format("truetype")
   font-weight: 500
   font-style: italic
 
@@ -76,11 +76,11 @@
 
 @font-face
   font-family: "TCCCUnityCond"
-  src: url('/assets/fonts/TCCCUnityCond/subset/TCCCUnityCond-Medium.ttf')
+  src: url('/assets/fonts/TCCCUnityCond/subset/TCCCUnityCond-Medium.ttf') format("truetype")
   font-weight: 500
 @font-face
   font-family: "TCCCUnityCond"
-  src: url('/assets/fonts/TCCCUnityCond/subset/TCCCUnityCond-Bold.ttf')
+  src: url('/assets/fonts/TCCCUnityCond/subset/TCCCUnityCond-Bold.ttf') format("truetype")
   font-weight: 700
 
 
@@ -91,21 +91,21 @@
 // ************************************************************
 @font-face
   font-family: "TCCCUnityHead"
-  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Light.ttf')
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Light.ttf') format("truetype")
   font-weight: 300
 @font-face
   font-family: "TCCCUnityHead"
-  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Regular.ttf')
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Regular.ttf') format("truetype")
   font-weight: 400
 @font-face
   font-family: "TCCCUnityHead"
-  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Medium.ttf')
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Medium.ttf') format("truetype")
   font-weight: 500
 @font-face
   font-family: "TCCCUnityHead"
-  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Bold.ttf')
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Bold.ttf') format("truetype")
   font-weight: 700
 @font-face
   font-family: "TCCCUnityHead"
-  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Black.ttf')
+  src: url('/assets/fonts/TCCCUnityHead/subset/TCCCUnityHead-Black.ttf') format("truetype")
   font-weight: 900
