--- a/src/components/pages/video/VideoPlayer.sass
+++ b/src/components/pages/video/VideoPlayer.sass
@@ -9,9 +9,11 @@
 
 .btn-skip
   position: absolute
-  top: 1rem
-  right: 1rem
-  background: white
-  font-size: 1.5rem
-  border-radius: 9999px
-  +flex-row
+  bottom: 10%
+  left: 0
+  right: 0
+  margin: 0 auto
+  +type-caption
+  text-transform: uppercase
+  font-weight: 900
+  letter-spacing: 0.05em
