--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -13,7 +13,7 @@
   --cl-darken: rgba(0,0,0,0.7)
   --cl-lighten: rgba(255,255,255,0.7) 
 
-  --nav-height: 6rem
+  --header-height: 8rem
 
   --z1: 100
   --z2: 200
@@ -32,8 +32,6 @@
   --p9: 7.2rem
   --p10: 8.0rem
 
-  +breakpoint(mobile)
-    --nav-height: 8rem
 
 html
   -webkit-font-smoothing: antialiased
