--- a/src/styles/sass/type-mixins.sass
+++ b/src/styles/sass/type-mixins.sass
@@ -9,7 +9,7 @@ $font-tccc-head: "TCCCUnityHead"
 =type-countdown
   font-family: $font-tccc
   font-size: 30rem
-  line-height: auto
+  line-height: 1
   font-weight: 900
   letter-spacing: -0.02em
 
@@ -19,14 +19,12 @@ $font-tccc-head: "TCCCUnityHead"
   line-height: 5.8rem
   font-weight: 700
   letter-spacing: -0.08em
-  text-transform: uppercase
 
 =type-point
   font-family: $font-tccc-cond
   font-size: 5rem
   line-height: 5.8rem
   font-weight: 700
-  text-transform: uppercase
 
 =type-h1
   font-family: $font-tccc
@@ -34,7 +32,6 @@ $font-tccc-head: "TCCCUnityHead"
   line-height: 1
   font-weight: 900
   letter-spacing: -0.06em
-  text-transform: uppercase
 
 =type-body1
   font-family: $font-tccc
