--- a/src/components/pages/Pages.sass
+++ b/src/components/pages/Pages.sass
@@ -6,32 +6,13 @@
 .page
   +full
   +flex-col
-  gap: 4rem
-  padding: 4rem
+  gap: 1.6rem
+  padding-inline: 2rem
+  padding-top: calc(var(--header-height) + 2rem)
+  padding-bottom: calc(env(safe-area-inset-bottom) + 2rem)
   text-align: center
-  backdrop-filter: blur(30px)
 
-  &.game
-    backdrop-filter: none
-    pointer-events: none
-
-  h1
-    font-size: 2.6rem
-
-  p
-    font-size: 1.6rem
-
-  h1, h3, p
-    margin-block: var(--p1)
-
-  button
-    font-size: 2rem
-    border: 1px solid black
-    padding-block: var(--p1)
-    padding-inline: var(--p2)
-    margin-top: var(--p2)
-    pointer-events: auto
-
+  // TRANSITION
   transition: all 0.3s ease 0s
   
   &:not(.show)
@@ -40,3 +21,18 @@
 
     button, a
       pointer-events: none
+
+
+  // GAME
+  &.game
+    backdrop-filter: none
+    pointer-events: none
+
+
+  .step
+    position: absolute
+    top: calc(var(--header-height) + 2rem)
+    left: 0
+    right: 0
+    margin-inline: auto
+    +type-caption
