--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -157,3 +157,10 @@ button
 
 // .lenis.lenis-scrolling iframe
 //   pointer-events: none
+
+
+
+.btn-secondary
+  opacity: 0.5
+  border-bottom: 0.2rem solid white
+  +type-body1
