--- a/src/components/pages/landing/Landing.sass
+++ b/src/components/pages/landing/Landing.sass
@@ -1,3 +1,16 @@
 @import '@/styles/shared.sass'
   
 .Landing
+
+  video
+    +full
+    object-fit: cover
+
+  .darken
+    +full
+    background: rgba(0, 0, 0, 0.2)
+
+  .wrap
+    position: relative
+    +flex-col
+    gap: 2rem
