--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -164,3 +164,11 @@ button
   opacity: 0.5
   border-bottom: 0.2rem solid white
   +type-body1
+
+.btn-skip-game
+  +type-body1
+  opacity: 0.5
+  border-bottom: 0.2rem solid white
+  position: absolute
+  bottom: 2rem
+  right: 2rem
