--- a/src/components/_misc/Intro.sass
+++ b/src/components/_misc/Intro.sass
@@ -1,5 +1,18 @@
 @import '@/styles/shared.sass'
 
 .intro
-
   
+  .step
+    background: white
+    color: black
+    border-radius: 1rem
+    height: 3rem
+    padding-inline: 1rem
+    text-transform: uppercase
+    font-family: $font-tccc-cond
+    +flex-row
+    letter-spacing: 0.02em
+    
+    span
+      margin-top: -0.2em
+    
