--- a/src/styles/sass/type-mixins.sass
+++ b/src/styles/sass/type-mixins.sass
@@ -27,11 +27,12 @@ $font-tccc-head: "TCCCUnityHead"
   font-weight: 700
 
 =type-h1
-  font-family: $font-tccc
-  font-size: 4.5rem
-  line-height: 1
-  font-weight: 900
-  letter-spacing: -0.06em
+  font-family: $font-tccc-cond
+  font-size: 8rem
+  line-height: 7rem
+  font-weight: 700
+  letter-spacing: -0.02em
+  text-transform: uppercase
 
 =type-body1
   font-family: $font-tccc
@@ -48,8 +49,8 @@ $font-tccc-head: "TCCCUnityHead"
   letter-spacing: -0.04em
 
 =type-cta
-  font-family: $font-tccc-cond
-  font-size: 2rem
-  font-weight: 500
-  line-height: 2.6rem
+  font-family: $font-tccc
+  font-size: 1.2rem
+  font-weight: 900
+  line-height: 2.2rem
   letter-spacing: 0.02em
