--- a/src/components/_misc/ButtonPrimary.sass
+++ b/src/components/_misc/ButtonPrimary.sass
@@ -26,3 +26,19 @@
     +type-cta
     margin-top: -0.3rem
     
+
+  // &.color-green
+  //   background: linear-gradient(to bottom, #008000, #006400)
+  //   border: 1px solid #008000
+  //   box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0, 0.25)
+
+
+  &.color-white
+    background: linear-gradient(to bottom, #ffffff, #cacaca)
+    border: 1px solid #cccccc
+    box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0, 0.25)
+    color: black
+
+    .progress
+      background: #dddddd
+      // transform: scaleX(0.5) !important
