--- a/src/components/_misc/TheHeader.sass
+++ b/src/components/_misc/TheHeader.sass
@@ -15,6 +15,10 @@
     position: relative
     width: 4rem
     height: 4rem
+    background: rgba(255,255,255,0.1)
+    backdrop-filter: blur(10px)
+    border: 0.2rem solid white
+    border-radius: 50%
 
     svg
       +full
