--- a/src/games/filling/FillingGame.sass
+++ b/src/games/filling/FillingGame.sass
@@ -3,3 +3,12 @@
 
 .game-filling
   pointer-events: none
+
+  .btn-cta
+    position: absolute
+    bottom: 20rem
+    left: 0
+    right: 0
+    margin: 0 auto
+    width: fit-content
+    +type-cta
