update landing page

--- a/src/components/pages/landing/Landing.sass
+++ b/src/components/pages/landing/Landing.sass
@@ -2,7 +2,7 @@
   
 .Landing
 
-  video
+  .bg
     +full
     object-fit: cover
 
@@ -14,3 +14,16 @@
     position: relative
     +flex-col
     gap: 2rem
+    margin-top: -10rem
+
+  .btn
+    position: relative
+
+    .hand
+      position: absolute
+      top: 100%
+      left: 0
+      right: 0
+      margin: 0 auto
+      width: 9.5rem
+      transform: translateY(10%)
