--- a/src/components/_misc/Intro.sass
+++ b/src/components/_misc/Intro.sass
@@ -1,6 +1,13 @@
 @import '@/styles/shared.sass'
 
 .intro
+
+  .bg
+    +full
+    object-fit: cover
+
+  >*
+    position: relative
   
   .step
     background: white
