filling game btn

--- a/src/games/filling/FillingGame.sass
+++ b/src/games/filling/FillingGame.sass
@@ -6,7 +6,8 @@
 
   .btn-cta
     position: absolute
-    bottom: 20rem
+    // bottom: 20rem
+    bottom: 5rem
     left: 0
     right: 0
     margin: 0 auto
