--- a/src/components/_misc/ButtonPrimary.sass
+++ b/src/components/_misc/ButtonPrimary.sass
@@ -14,6 +14,14 @@
   pointer-events: auto
   overflow: hidden
 
+  &:not(.show) 
+    display: none
+    pointer-events: none
+
+  &.disabled
+    filter: saturate(0.5)
+    pointer-events: none
+
   .progress
     +full
     background: #a50509
