--- a/src/components/pages/ending/Ending.sass
+++ b/src/components/pages/ending/Ending.sass
@@ -35,10 +35,16 @@
     line-height: 0
     animation: up 15s linear infinite
 
-    img
+    img, svg
       position: relative
       width: 100%
       margin-top: -28rem
+
+      &.red
+        color: $cl-red
+
+      &.green
+        color: $cl-green-light
 
 @keyframes up
   0%
