--- a/src/components/_misc/Points.sass
+++ b/src/components/_misc/Points.sass
@@ -8,7 +8,7 @@
   +flex-col
   width: 5rem
 
-  .type-score
+  .type-score-value
     margin-top: -0.6em
   
   transition: opacity 0.3s ease-in-out
