--- a/src/components/_misc/TutorialFilling.sass
+++ b/src/components/_misc/TutorialFilling.sass
@@ -15,6 +15,7 @@
     width: 100%
     transform: translateY(50%)
     overflow: hidden
+    filter: brightness(100)
 
     animation: fill 1s ease-in-out infinite
 
