--- a/src/styles/app/type-classes.sass
+++ b/src/styles/app/type-classes.sass
@@ -3,11 +3,11 @@
 .type-countdown
   +type-countdown()
 
-.type-score
-  +type-score()
+.type-score-label
+  +type-score-label()
 
-.type-point
-  +type-point()
+.type-score-value
+  +type-score-value()
 
 .type-h1
   +type-h1()
