--- a/src/styles/sass/type-mixins.sass
+++ b/src/styles/sass/type-mixins.sass
@@ -13,26 +13,26 @@ $font-tccc-head: "TCCCUnityHead"
   font-weight: 900
   letter-spacing: -0.02em
 
-=type-score
+=type-score-label
   font-family: $font-tccc
+  font-weight: 500
+  font-size: 1rem
+  line-height: 2.2rem
+  letter-spacing: -0.04em
+
+=type-score-value
+  font-family: $font-tccc
+  font-weight: 700
   font-size: 3rem
   line-height: 5.8rem
-  font-weight: 700
   letter-spacing: -0.08em
 
-=type-point
-  font-family: $font-tccc-cond
-  font-size: 5rem
-  line-height: 5.8rem
-  font-weight: 700
-
 =type-h1
-  font-family: $font-tccc-cond
-  font-size: 8rem
-  line-height: 7rem
-  font-weight: 700
-  letter-spacing: -0.02em
-  text-transform: uppercase
+  font-family: $font-tccc
+  font-size: 4rem
+  line-height: 1.05
+  font-weight: 900
+  letter-spacing: -0.06em
 
 =type-body1
   font-family: $font-tccc
@@ -42,15 +42,16 @@ $font-tccc-head: "TCCCUnityHead"
   letter-spacing: -0.04em
 
 =type-caption
-  font-family: $font-tccc
-  font-size: 1rem
+  font-family: $font-tccc-cond
+  font-size: 1.5rem
   font-weight: 500
   line-height: 2.2rem
-  letter-spacing: -0.04em
+  letter-spacing: 0em
+  text-transform: uppercase
 
 =type-cta
   font-family: $font-tccc
   font-size: 1.2rem
   font-weight: 900
   line-height: 2.2rem
-  letter-spacing: 0.02em
+  letter-spacing: -0.02em
