--- a/src/components/_misc/Intro.sass
+++ b/src/components/_misc/Intro.sass
@@ -10,16 +10,21 @@
     position: relative
   
   .step
-    background: white
-    color: black
+    background: rgba(255,255,255,0.2)
+    backdrop-filter: blur(10px)
     border-radius: 1rem
     height: 3rem
-    padding-inline: 1rem
+    padding-inline: 1.25rem
     text-transform: uppercase
-    font-family: $font-tccc-cond
+
     +flex-row
+    letter-spacing: 0.02em
+
+    font-family: $font-tccc-cond
     letter-spacing: 0.02em
     
     span
       margin-top: -0.2em
     
+  .button-primary
+    margin-top: 2rem
