--- a/src/components/_misc/PointPopup.sass
+++ b/src/components/_misc/PointPopup.sass
@@ -8,15 +8,17 @@
   pointer-events: none
 
   .wrap
-    background: white
+    background: linear-gradient(to bottom, #f50008, #810004)
+    box-shadow: 0 0 2rem 0.5rem rgba(0,0,0,0.1)
     border-radius: 1rem
     padding-inline: 1rem
     +flex-row
     height: 4.2rem
-    color: black
+    width: 6.6rem
     font-family: $font-tccc-cond
     font-size: 2.12rem
     font-weight: 500
+    letter-spacing: 0em
     opacity: 0
 
   span
