--- a/src/components/_misc/Results.sass
+++ b/src/components/_misc/Results.sass
@@ -8,7 +8,7 @@
   >.wrap
     flex: 1
     +flex-col
-    gap: 2rem
+    gap: 3rem
 
   
   .scores
@@ -16,8 +16,8 @@
     gap: 1rem
 
     li
-      width: 7.6rem
-      aspect-ratio: 76 / 118
+      width: 10.4rem
+      aspect-ratio: 104 / 118
       background: white
       color: black
       border-radius: 1.4rem
@@ -25,15 +25,21 @@
       box-shadow: 0 0rem 2rem 0.5rem rgba(0,0,0, 0.1)
 
       .value
-        font-family: $font-tccc-cond
-        font-size: 4rem
-        letter-spacing: -0.02rem
+        font-family: $font-tccc
+        font-weight: 900
+        font-size: 4.5rem
+        line-height: 1
+        letter-spacing: -0.06em
+        margin-left: -0.05em
 
       .label
         font-family: $font-tccc-cond
+        font-weight: 500
+        font-size: 1.5rem
+        line-height: 1
         letter-spacing: 0rem
         text-transform: uppercase
-        margin-top: 1rem
+        margin-top: 0.5rem
 
   .btn-secondary
     pointer-events: all
