--- a/src/components/_misc/TimeLeft.sass
+++ b/src/components/_misc/TimeLeft.sass
@@ -7,7 +7,7 @@
   +flex-col
   width: 8.5rem
 
-  .type-score
+  .type-score-value
     margin-top: -0.6em
   
   transition: opacity 0.3s ease-in-out
