--- a/src/components/pages/landing/Landing.sass
+++ b/src/components/pages/landing/Landing.sass
@@ -12,17 +12,22 @@
 
   .wrap
     position: relative
-    +flex-col
-    gap: 2rem
+    width: 100%
+    height: 100%
+    +flex-col(space-between, center)
 
-  .btn
-    position: relative
+    >.bottom
+      +flex-col()
+      gap: 5lvh
 
-    .hand
-      position: absolute
-      top: 100%
-      left: 0
-      right: 0
-      margin: 0 auto
-      width: 9.5rem
-      transform: translateY(10%)
+  // .btn
+  //   position: relative
+
+  // .hand
+  //   position: absolute
+  //   top: 100%
+  //   left: 0
+  //   right: 0
+  //   margin: 0 auto
+  //   width: 9.5rem
+  //   transform: translateY(10%)
