--- a/src/components/pages/video/VideoPlayer.sass
+++ b/src/components/pages/video/VideoPlayer.sass
@@ -12,8 +12,11 @@
     left: 0
     right: 0
     margin: 0 auto
-    +type-caption
-    text-transform: uppercase
+
+    font-family: $font-tccc
     font-weight: 900
+    font-size: 1rem
+    line-height: 1
     letter-spacing: 0.05em
+    text-transform: uppercase
     pointer-events: all
