--- a/src/components/pages/Pages.sass
+++ b/src/components/pages/Pages.sass
@@ -28,15 +28,18 @@
     flex: 1
     +flex-col
 
-  // TRANSITION
-  transition: all 0.3s ease 0s
-  
   &:not(.show)
-    opacity: 0
     pointer-events: none
 
     button, a
       pointer-events: none
+
+  &.page-opacity
+    transition: all 0.3s ease 0.3s
+    
+    &:not(.show)
+      opacity: 0
+      transition: all 0.3s ease 0s
 
 
   // GAME
