--- a/src/components/_misc/Countdown.sass
+++ b/src/components/_misc/Countdown.sass
@@ -8,6 +8,7 @@
   .countdown__number
     +center-img
     -webkit-text-stroke: 2rem rgba(255, 255, 255, 0.1)
+    opacity: 0
 
 
   // transition: opacity 0.3s ease-in-out
