loading liquid anim

--- a/src/components/pages/loading/LoadingBg.sass
+++ b/src/components/pages/loading/LoadingBg.sass
@@ -11,3 +11,14 @@
 
   .bottleMaskInvert
     transform-origin: center
+
+  .slide-right
+    animation: slide-right 0.5s infinite linear
+
+
+@keyframes slide-right
+  0%
+    transform: translateX(0%)
+
+  100%
+    transform: translateX(41px)
