--- a/src/components/_misc/Countdown.sass
+++ b/src/components/_misc/Countdown.sass
@@ -7,6 +7,7 @@
 
   .countdown__number
     +center-img
+    transform-origin: center
     -webkit-text-stroke: 2rem rgba(255, 255, 255, 0.1)
     opacity: 0
 
