--- a/src/components/_misc/tutorial/TutorialFilling0.sass
+++ b/src/components/_misc/tutorial/TutorialFilling0.sass
@@ -1,6 +1,6 @@
 @import "@/styles/shared.sass"
 
-.tutorial-filling
+.tutorial-filling0
   +full
   +flex-row
   overflow: hidden
@@ -17,12 +17,12 @@
     overflow: hidden
     filter: brightness(100)
 
-    animation: fill 1s ease-in-out infinite
+    animation: fill 2s ease-in-out infinite
 
     img
       transform: translateY(-50%)
 
-      animation: fill-inverse 1s ease-in-out infinite
+      animation: fill-inverse 2s ease-in-out infinite
 
 
 @keyframes fill
