--- a/src/components/_misc/tutorial/TutorialGrouping0.sass
+++ b/src/components/_misc/tutorial/TutorialGrouping0.sass
@@ -1,6 +1,6 @@
 @import "@/styles/shared.sass"
 
-.tutorial-grouping
+.tutorial-grouping0
   +full
   +flex-row
 
@@ -16,5 +16,5 @@
     width: 50%
     aspect-ratio: 1
     border-radius: 50%
-    background: #d9d9d9
+    background: white
     
