result bg and anim in

--- a/src/components/_misc/BottleBg.sass
+++ b/src/components/_misc/BottleBg.sass
@@ -11,7 +11,8 @@
   gap: 0
   font-size: 0
   line-height: 0
-  animation: up 15s linear infinite
+  // animation: up 15s linear infinite
+  // transform: translateY(150lvh)
 
   .bottle
     position: relative
