--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -162,8 +162,14 @@ button
 
 .btn-secondary
   opacity: 0.5
-  border-bottom: 0.2rem solid white
   +type-body1
+
+  .line
+    position: absolute
+    top: 100%
+    width: 100%
+    height: 1px
+    background: white
 
 .btn-skip-game
   +type-body1
