--- a/src/components/_misc/Results.sass
+++ b/src/components/_misc/Results.sass
@@ -27,6 +27,7 @@
         background: white
         border-radius: 1.4rem
         box-shadow: 0 0rem 2rem 0.5rem rgba(0,0,0, 0.1)
+        opacity: 0
 
       .value
         font-family: $font-tccc
@@ -35,6 +36,7 @@
         line-height: 1
         letter-spacing: -0.06em
         margin-left: -0.05em
+        opacity: 0
 
       .label
         font-family: $font-tccc-cond
@@ -44,8 +46,10 @@
         letter-spacing: 0rem
         text-transform: uppercase
         margin-top: 0.5rem
+        opacity: 0
 
   .btn-secondary
     position: relative
     pointer-events: all
+    opacity: 0
     
