button holding state

--- a/src/components/_misc/ButtonPrimary.sass
+++ b/src/components/_misc/ButtonPrimary.sass
@@ -38,6 +38,19 @@
     transform: scaleX(0)
     transform-origin: left
 
+  .holding-circle
+    position: absolute
+    top: 50%
+    left: 50%
+    width: 7.4rem
+    height: 7.4rem
+    background: rgba(#111111, 0.2)
+    transform: translate(-50%, -50%) scale(0)
+    border-radius: 50%
+    transition: transform 0.1s ease-in-out
+    &.holding
+      transform: translate(-50%, -50%) scale(1)
+
   .label
     position: relative
     +flex-row(center, center)
