--- a/src/components/_misc/tutorial/TutorialFilling1.sass
+++ b/src/components/_misc/tutorial/TutorialFilling1.sass
@@ -5,22 +5,26 @@
   +flex-row
   overflow: hidden
 
-  .bottle-outline, .bottle-solid
+  // .bottle-outline, .bottle-solid
+  //   +center-img
+  //   height: 100%
+
+  // .bottle-solid-wrap
+  //   position: relative
+  //   height: 100%
+  //   width: 100%
+  //   transform: translateY(50%)
+  //   overflow: hidden
+  //   filter: brightness(100)
+
+  //   animation: fill 2s ease-in-out infinite
+
+  //   img
+  //     animation: fill-inverse 2s ease-in-out infinite
+
+  svg
     +center-img
     height: 100%
-
-  .bottle-solid-wrap
-    position: relative
-    height: 100%
-    width: 100%
-    transform: translateY(50%)
-    overflow: hidden
-    filter: brightness(100)
-
-    animation: fill 2s ease-in-out infinite
-
-    img
-      animation: fill-inverse 2s ease-in-out infinite
 
   .bottle-line
     position: absolute
