tutorial prev/next swipe

--- a/src/components/_misc/tutorial/Tutorial.sass
+++ b/src/components/_misc/tutorial/Tutorial.sass
@@ -18,6 +18,7 @@
     backdrop-filter: blur(7px)
     border-radius: 2rem
     border: var(--border)
+    pointer-events: auto
 
     >svg
       position: absolute
