--- a/src/components/_misc/tutorial/Tutorial.sass
+++ b/src/components/_misc/tutorial/Tutorial.sass
@@ -5,8 +5,12 @@
   +flex-col(space-between, stretch)
   --border: 0.2rem solid rgba(255,255,255,0.2)
 
+
   .page__top
     flex: 0.5
+  
+  .preheading
+    opacity: 0
   
   .panel
     position: relative
@@ -19,6 +23,7 @@
     border-radius: 2rem
     border: var(--border)
     pointer-events: auto
+    opacity: 0
 
     >svg
       position: absolute
