--- a/src/components/_misc/tutorial/TutorialCleaning0.sass
+++ b/src/components/_misc/tutorial/TutorialCleaning0.sass
@@ -13,20 +13,20 @@
     top: 50%
     transform: translate(-50%, -50%)
 
-    animation: align 1s ease-in-out infinite
+//     animation: align 1s ease-in-out infinite
 
 
-@keyframes align
-  0%
-    transform: translate(50%, -50%)
-    opacity: 0
-  20%
-    opacity: 1
-  80%
-    transform: translate(-50%, -50%)
-    opacity: 1
-  100%
-    opacity: 0
+// @keyframes align
+//   0%
+//     transform: translate(-100%, -50%)
+//     opacity: 0
+//   20%
+//     opacity: 1
+//   80%
+//     transform: translate(-50%, -50%)
+//     opacity: 1
+//   100%
+//     opacity: 0
 
     
     
