--- a/src/components/_misc/tutorial/TutorialCleaning0.sass
+++ b/src/components/_misc/tutorial/TutorialCleaning0.sass
@@ -11,7 +11,7 @@
     position: absolute
     left: 50%
     top: 50%
-    transform: translate(-50%, -50%)
+    // transform: translate(-50%, -50%)
 
 //     animation: align 1s ease-in-out infinite
 
