--- a/src/components/_misc/ButtonPrimary.sass
+++ b/src/components/_misc/ButtonPrimary.sass
@@ -42,8 +42,9 @@
     position: absolute
     top: 50%
     left: 50%
-    width: 7.4rem
-    height: 7.4rem
+    width: 100%
+    aspect-ratio: 1 / 1
+    // height: 7.4rem
     background: rgba(#111111, 0.2)
     transform: translate(-50%, -50%) scale(0)
     border-radius: 50%
