--- a/src/components/_misc/tutorial/TutorialCleaning0.sass
+++ b/src/components/_misc/tutorial/TutorialCleaning0.sass
@@ -7,7 +7,7 @@
   img
     height: 100%
 
-  .bottle-solid
+  .bottle-solid-left, .bottle-solid-right
     position: absolute
     left: 50%
     top: 50%
