--- a/src/components/_misc/Step.sass
+++ b/src/components/_misc/Step.sass
@@ -16,7 +16,8 @@
     +full
     background: rgba(255,255,255,0.2)
     backdrop-filter: blur(10px)
-    border-radius: 1rem
+    // border-radius: 1rem
+    border-radius: 1.5rem
   
   span
     margin-top: -0.2em
