--- a/src/components/pages/Pages.sass
+++ b/src/components/pages/Pages.sass
@@ -46,3 +46,14 @@
   &.game
     pointer-events: none
 
+
+    .btn-cta
+      position: absolute
+      // bottom: 20rem
+      bottom: 5rem
+      left: 0
+      right: 0
+      margin: 0 auto
+      width: fit-content
+      +type-cta
+
