--- a/src/components/_misc/tutorial/TutorialCleaning0.sass
+++ b/src/components/_misc/tutorial/TutorialCleaning0.sass
@@ -2,31 +2,20 @@
 
 .tutorial-cleaning0
   +full
-  +flex-row
+  width: auto
+  aspect-ratio: 1
+  right: 0
+  margin: 0 auto
+  overflow: hidden
 
   img
-    height: 100%
+    width: 3rem
 
-  .bottle-solid-left, .bottle-solid-right
+  .bottle-solid-container
     position: absolute
+    top: 0
     left: 50%
-    top: 50%
-    // transform: translate(-50%, -50%)
-
-//     animation: align 1s ease-in-out infinite
-
-
-// @keyframes align
-//   0%
-//     transform: translate(-100%, -50%)
-//     opacity: 0
-//   20%
-//     opacity: 1
-//   80%
-//     transform: translate(-50%, -50%)
-//     opacity: 1
-//   100%
-//     opacity: 0
-
-    
+    margin-left: 3rem
+    +flex-row
+    gap: 1.5rem
     
