--- a/src/components/_misc/TheHeader.sass
+++ b/src/components/_misc/TheHeader.sass
@@ -25,8 +25,13 @@
 
 
   .center
+    position: relative
     flex: 1
     +flex-row(center, center)
 
     .logo
       height: 2.5rem
+
+    .type-caption
+      +full
+      +flex-row
