--- a/src/components/pages/video/VideoPlayer.sass
+++ b/src/components/pages/video/VideoPlayer.sass
@@ -14,6 +14,8 @@
     right: 0
     margin: 0 auto
 
+    padding: 1rem 2rem
+
     font-family: $font-tccc
     font-weight: 900
     font-size: 1rem
