--- a/src/components/_misc/Quit.sass
+++ b/src/components/_misc/Quit.sass
@@ -11,7 +11,8 @@
 
   .bg
     +full
-    background: rgba(0, 0, 0, 0.4)
+    background: rgba(0, 0, 0, 0.55)
+    backdrop-filter: blur(6px)
 
     img
       +full
