--- a/src/styles/core.sass
+++ b/src/styles/core.sass
@@ -188,6 +188,5 @@ button
   z-index: -1
   transition: all 0.3s ease
 
-
-  // &.blurBg
-  //   filter: blur(16px)
+  &.blurBg
+    filter: blur(5px)
