result fix; bottle hardlight

--- a/src/components/_misc/BottleBg.sass
+++ b/src/components/_misc/BottleBg.sass
@@ -15,16 +15,16 @@
   // animation: up 15s linear infinite
   // transform: translateY(150lvh)
 
-  .bottle
-    position: relative
-    width: 100%
-    margin-top: -28rem
+.bottleBg__bottle
+  position: relative
+  width: 100%
+  margin-top: -28rem
 
-    &.red
-      color: $cl-red
+  &.red
+    color: $cl-red
 
-    &.green
-      color: $cl-green-light
+  &.green
+    color: $cl-green-light
 
 .bottleBg__circle
   position: absolute
