point popup in circle n bold

--- a/src/components/_misc/game/PointPopup.sass
+++ b/src/components/_misc/game/PointPopup.sass
@@ -21,5 +21,10 @@
     letter-spacing: 0em
     opacity: 0
 
+    width: 4.2rem
+    height: 4.2rem
+    font-weight: bold
+    border-radius: 50%
+
   span
     margin-top: -0.1em
