--- a/src/components/pages/video/VideoPlayer.sass
+++ b/src/components/pages/video/VideoPlayer.sass
@@ -12,9 +12,9 @@
 
   .btn-skip
     position: absolute
-    bottom: 10%
-    left: 0
-    right: 0
+    // left: 0
+    bottom: calc(var(--safe-area-inset-bottom) + 1rem)
+    right: 0rem
     margin: 0 auto
 
     padding: 1rem 2rem
